--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
+    "@types/react-scroll": "^1.8.7",
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
@@ -23,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-scroll": "^1.8.9",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
